fix(28): revise helm chart plans based on checker feedback
Address 7 checker issues:
- Fix secret key name mismatch (rds-private-key vs ssh-key/id_rsa)
- Add RBAC rule diff verification command
- Add Secret prerequisite validation in NOTES.txt
- Update ROADMAP success criterion 6 (git-only distribution)
- Reframe must_haves truth from 'helm lint' to user-observable
- Add ServiceMonitor-to-Service selector verification
- Acknowledge 3-file task scope as appropriate for declarative config

--- a/.planning/phases/28-helm-chart/28-01-PLAN.md
+++ b/.planning/phases/28-helm-chart/28-01-PLAN.md
@@ -16,9 +16,9 @@ must_haves:
   truths:
     - "Chart.yaml declares apiVersion v2, name rds-csi-driver, version 1.0.0, appVersion 0.10.0"
     - "values.yaml contains flat structure with controller, node, rds, monitoring, sidecars, storageClasses sections"
-    - "values.schema.json validates rds.managementIP and rds.secretName as required fields"
+    - "Required parameters (rds.managementIP, rds.secretName) are rejected by schema when missing at install time"
     - "_helpers.tpl provides name, fullname, chart, labels, selectorLabels, serviceAccountName helpers"
-    - "helm lint passes on the chart directory with no errors"
+    - "Chart installs successfully with default values (all defaults are valid per schema)"
   artifacts:
     - path: "deploy/helm/rds-csi-driver/Chart.yaml"
       provides: "Chart metadata with apiVersion v2"
@@ -286,14 +286,33 @@ namespace:
   create: false                   # Set true to create namespace via chart
 ```
 
-IMPORTANT: Match the exact flag names from cmd/rds-csi-plugin/main.go. The controller uses `-rds-address`, `-rds-port`, `-rds-user`, `-rds-key-file`, `-rds-host-key`, `-rds-insecure-skip-verify`, `-rds-volume-base-path`, `-endpoint`, `-node-id`, `-controller`, `-node`, `-v`, `-metrics-address`, `-enable-orphan-reconciler`, `-orphan-check-interval`, `-orphan-grace-period`, `-orphan-dry-run`, `-attachment-grace-period`, `-attachment-reconcile-interval`, `-enable-vmi-serialization`, `-vmi-cache-ttl`. The node uses env var `CSI_MANAGED_NQN_PREFIX` for NQN prefix.
+IMPORTANT -- Secret key names and mount paths:
 
-The existing manifests mount the secret at `/etc/rds-csi` and reference keys `rds-private-key` and `rds-host-key`. Keep these key names consistent.
+The existing deployed manifest (deploy/kubernetes/controller.yaml) uses these secret key names:
+- `rds-private-key` (SSH private key)
+- `rds-host-key` (SSH host public key)
+
+The secret is mounted at `/etc/rds-csi` (not `/etc/rds-csi/ssh-key/`). This means the actual file paths inside the container are:
+- `/etc/rds-csi/rds-private-key`
+- `/etc/rds-csi/rds-host-key`
+
+The driver's main.go has a default of `-rds-key-file=/etc/rds-csi/ssh-key/id_rsa` but the deployed manifest overrides this with `-rds-key-file=/etc/rds-csi/rds-private-key`. The Helm chart must follow the DEPLOYED convention (matching existing Secret format), NOT the main.go defaults.
+
+The values.yaml comments should document the expected Secret structure:
+```yaml
+  # Secret must contain keys: rds-private-key (SSH private key), rds-host-key (SSH host public key)
+  # Optional: snmp-community (SNMP community string for hardware monitoring)
+  secretName: "rds-csi-secret"
+```
+
+This is 3 declarative config files with no logic or branching -- pure YAML/JSON declarations. The scope is appropriate for a single task despite 3 files because they are tightly coupled (values.yaml structure must match Chart.yaml appVersion and cross-references).
+
+IMPORTANT: Match the exact flag names from cmd/rds-csi-plugin/main.go. The controller uses `-rds-address`, `-rds-port`, `-rds-user`, `-rds-key-file`, `-rds-host-key`, `-rds-insecure-skip-verify`, `-rds-volume-base-path`, `-endpoint`, `-node-id`, `-controller`, `-node`, `-v`, `-metrics-address`, `-enable-orphan-reconciler`, `-orphan-check-interval`, `-orphan-grace-period`, `-orphan-dry-run`, `-attachment-grace-period`, `-attachment-reconcile-interval`, `-enable-vmi-serialization`, `-vmi-cache-ttl`. The node uses env var `CSI_MANAGED_NQN_PREFIX` for NQN prefix.
   </action>
   <verify>
-Run `ls -la deploy/helm/rds-csi-driver/` to confirm Chart.yaml, values.yaml, .helmignore exist. Verify Chart.yaml has apiVersion v2 and version 1.0.0.
+Run `ls -la deploy/helm/rds-csi-driver/` to confirm Chart.yaml, values.yaml, .helmignore exist. Verify Chart.yaml has apiVersion v2 and version 1.0.0. Verify values.yaml comments document the expected Secret key names (`rds-private-key`, `rds-host-key`) matching deploy/kubernetes/controller.yaml.
   </verify>
-  <done>Chart.yaml, values.yaml, and .helmignore exist with all configuration sections matching existing manifest values and main.go flag names.</done>
+  <done>Chart.yaml, values.yaml, and .helmignore exist with all configuration sections matching existing manifest values and main.go flag names. Secret key names documented as rds-private-key and rds-host-key (matching deployed manifests, not main.go defaults).</done>
 </task>
 
 <task type="auto">
@@ -336,8 +355,9 @@ Run `helm lint deploy/helm/rds-csi-driver/` (or via nix-shell). Expect warnings 
 1. `helm lint deploy/helm/rds-csi-driver/` passes (warnings OK, no errors)
 2. Chart.yaml has apiVersion v2, version 1.0.0, appVersion 0.10.0
 3. values.yaml covers all sections: rds, controller, node, sidecars, monitoring, storageClasses, snapshotClass
-4. _helpers.tpl defines rds-csi.name, rds-csi.fullname, rds-csi.labels, rds-csi.selectorLabels, rds-csi.serviceAccountName
-5. values.schema.json validates rds.managementIP and rds.secretName as required
+4. values.yaml documents Secret key names as `rds-private-key` and `rds-host-key` (matching deploy/kubernetes/controller.yaml)
+5. _helpers.tpl defines rds-csi.name, rds-csi.fullname, rds-csi.labels, rds-csi.selectorLabels, rds-csi.serviceAccountName
+6. values.schema.json validates rds.managementIP and rds.secretName as required
 </verification>
 
 <success_criteria>
@@ -345,6 +365,7 @@ Run `helm lint deploy/helm/rds-csi-driver/` (or via nix-shell). Expect warnings 
 - All driver configuration options from main.go are represented in values.yaml
 - Template helpers follow Helm best practices (standard label format)
 - JSON Schema catches missing required fields at install time
+- Secret key names in values.yaml comments match deployed manifest convention (rds-private-key, rds-host-key), not main.go defaults
 </success_criteria>
 
 <output>
