--- a/.planning/phases/28-helm-chart/28-02-PLAN.md
+++ b/.planning/phases/28-helm-chart/28-02-PLAN.md
@@ -21,6 +21,7 @@ must_haves:
     - "CSIDriver resource uses hardcoded driver name rds.csi.srvlab.io with all existing spec fields preserved"
     - "All templates use {{ .Release.Namespace }} instead of hardcoded namespace"
     - "All sidecar leader-election-namespace args use {{ .Release.Namespace }}"
+    - "Controller template mounts Secret at /etc/rds-csi with key paths rds-private-key and rds-host-key matching deployed manifests"
     - "helm template generates valid YAML for all core resources"
   artifacts:
     - path: "deploy/helm/rds-csi-driver/templates/controller.yaml"
@@ -51,6 +52,10 @@ must_haves:
       to: "deploy/helm/rds-csi-driver/values.yaml"
       via: "all container args templated from .Values.rds and .Values.controller"
       pattern: "\\.Values\\.rds\\."
+    - from: "deploy/helm/rds-csi-driver/templates/controller.yaml"
+      to: "rds.secretName"
+      via: "Secret volume references .Values.rds.secretName for credential mounting"
+      pattern: "secretName.*\\.Values\\.rds\\.secretName"
 ---
 
 <objective>
@@ -146,8 +151,22 @@ Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi`
 2. ClusterRoles have all RBAC rules from the original manifests
 3. ClusterRoleBindings reference correct namespace in subjects
 4. CSIDriver name is `rds.csi.srvlab.io` (not templated)
+
+**RBAC rule verification (REQUIRED):** Extract and diff the controller ClusterRole rules between the rendered Helm template and the existing manifest to confirm no rules were dropped or modified:
+```bash
+# Extract controller ClusterRole rules from existing manifest
+yq '.rules' deploy/kubernetes/rbac.yaml > /tmp/existing-rbac-rules.yaml
+
+# Extract controller ClusterRole rules from rendered Helm template
+helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi \
+  | yq 'select(.kind == "ClusterRole" and .metadata.name == "*-controller-role") | .rules' > /tmp/helm-rbac-rules.yaml
+
+# Diff the two (should show no differences in rule content, only formatting)
+diff /tmp/existing-rbac-rules.yaml /tmp/helm-rbac-rules.yaml
+```
+If yq is not available, use `nix-shell -p yq-go` or manually compare the rules sections. The diff must show zero substantive differences -- only name/label changes are acceptable.
   </verify>
-  <done>Four template files render correctly. RBAC preserves all existing rules. All namespace references use {{ .Release.Namespace }}. CSIDriver spec matches existing manifest exactly.</done>
+  <done>Four template files render correctly. RBAC preserves all existing rules (verified by diff against deploy/kubernetes/rbac.yaml). All namespace references use {{ .Release.Namespace }}. CSIDriver spec matches existing manifest exactly.</done>
 </task>
 
 <task type="auto">
@@ -175,8 +194,8 @@ The controller Deployment must include:
      - `-rds-address={{ .Values.rds.managementIP }}`
      - `-rds-port={{ .Values.rds.sshPort }}`
      - `-rds-user={{ .Values.rds.sshUser }}`
-     - `-rds-key-file=/etc/rds-csi/rds-private-key`
-     - `-rds-host-key=/etc/rds-csi/rds-host-key`
+     - `-rds-key-file=/etc/rds-csi/rds-private-key` (HARDCODED path -- matches existing Secret key name from deploy/kubernetes/controller.yaml, NOT the main.go default of /etc/rds-csi/ssh-key/id_rsa)
+     - `-rds-host-key=/etc/rds-csi/rds-host-key` (HARDCODED path -- matches existing Secret key name)
      - `-rds-volume-base-path={{ .Values.rds.basePath }}`
      - `-v={{ .Values.controller.logLevel }}`
      - `-metrics-address=:{{ .Values.monitoring.port }}` (conditional on monitoring.enabled)
@@ -200,6 +219,15 @@ The controller Deployment must include:
 10. **Container: liveness-probe** -- Image from `.Values.sidecars.livenessProbe.*`, args: `--csi-address=$(ADDRESS)`, `--v=5`
 
 11. **Volumes**: socket-dir (emptyDir), rds-credentials (secret from `.Values.rds.secretName`, defaultMode 0400)
+
+The secret volume MUST reference `.Values.rds.secretName`:
+```yaml
+      - name: rds-credentials
+        secret:
+          secretName: {{ .Values.rds.secretName }}
+          defaultMode: 0400
+```
+This ensures the controller will fail at runtime with a clear error if the user has not created the Secret. The chart intentionally does NOT create the Secret (per CONTEXT.md: "user creates Secret first, chart references via rds.secretName").
 
 **node.yaml** - Convert deploy/kubernetes/node.yaml to Helm template:
 
@@ -235,9 +263,9 @@ CRITICAL: The kubeletPath value MUST be used consistently in hostPath volumes. U
 After creating both templates, run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi` and verify the output matches the existing deploy/kubernetes/ manifests in structure (container names, volume mounts, security contexts). Differences should only be in names (templated) and namespace (templated).
   </action>
   <verify>
-Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi | grep -c "kind:"` to count generated resources. Run `helm lint deploy/helm/rds-csi-driver/` to verify no errors. Visually compare `helm template` output against existing deploy/kubernetes/ manifests to confirm all containers, volumes, and args are present.
+Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi | grep -c "kind:"` to count generated resources. Run `helm lint deploy/helm/rds-csi-driver/` to verify no errors. Visually compare `helm template` output against existing deploy/kubernetes/ manifests to confirm all containers, volumes, and args are present. Verify the rds-credentials volume references `.Values.rds.secretName` and mounts at `/etc/rds-csi` with key paths `rds-private-key` and `rds-host-key`.
   </verify>
-  <done>Controller Deployment has 6 containers (driver + 5 sidecars) with all args from main.go templated. Node DaemonSet has 3 containers with privileged security context, hostNetwork, and bidirectional mount propagation preserved. helm template renders valid YAML matching existing manifest structure.</done>
+  <done>Controller Deployment has 6 containers (driver + 5 sidecars) with all args from main.go templated. Secret key file paths are /etc/rds-csi/rds-private-key and /etc/rds-csi/rds-host-key (matching deployed manifests). Node DaemonSet has 3 containers with privileged security context, hostNetwork, and bidirectional mount propagation preserved. helm template renders valid YAML matching existing manifest structure.</done>
 </task>
 
 </tasks>
@@ -254,15 +282,18 @@ Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi 
 3. Controller has 6 containers: rds-csi-driver, csi-provisioner, csi-attacher, csi-resizer, csi-snapshotter, liveness-probe
 4. Node has 3 containers: rds-csi-driver, node-driver-registrar, liveness-probe
 5. All leader-election-namespace args use {{ .Release.Namespace }}
-6. All RBAC rules match deploy/kubernetes/rbac.yaml exactly
+6. All RBAC rules match deploy/kubernetes/rbac.yaml exactly (verified via diff)
 7. No hardcoded `rds-csi` namespace strings in templates (only {{ .Release.Namespace }})
+8. Controller Secret volume references .Values.rds.secretName with mount at /etc/rds-csi
 </verification>
 
 <success_criteria>
 - Core templates render resources equivalent to existing deploy/kubernetes/ manifests
 - All container args match main.go flag names exactly
+- Secret key file paths match deployed convention: /etc/rds-csi/rds-private-key, /etc/rds-csi/rds-host-key
 - Namespace is configurable via helm install --namespace
 - Resources, scheduling, and security contexts are configurable via values
+- RBAC rules verified identical to source via diff command
 - helm lint and helm template both succeed without errors
 </success_criteria>
 
