--- a/.planning/phases/28-helm-chart/28-03-PLAN.md
+++ b/.planning/phases/28-helm-chart/28-03-PLAN.md
@@ -19,8 +19,9 @@ must_haves:
     - "StorageClass parameters include nvmeAddress, nvmePort, volumePath with fallback to rds.* defaults"
     - "VolumeSnapshotClass template is conditional on snapshotClass.enabled"
     - "ServiceMonitor is conditional on both monitoring.enabled AND serviceMonitor.enabled AND CRD detection (or forceEnable)"
+    - "ServiceMonitor selector includes app.kubernetes.io/component: controller label matching metrics Service selector"
     - "Metrics Service exposes port from monitoring.port for Prometheus scraping"
-    - "NOTES.txt shows post-install instructions including pod verification, StorageClass list, and metrics info"
+    - "NOTES.txt shows post-install instructions including Secret prerequisite check, pod verification, StorageClass list, and metrics info"
     - "README.md documents installation, configuration, and all values.yaml options"
     - "RWX StorageClass is not created by default (enabled: false)"
   artifacts:
@@ -37,8 +38,8 @@ must_haves:
       provides: "Conditional Prometheus ServiceMonitor"
       contains: "monitoring.coreos.com/v1"
     - path: "deploy/helm/rds-csi-driver/templates/NOTES.txt"
-      provides: "Post-install user instructions"
-      contains: "kubectl get pods"
+      provides: "Post-install user instructions with Secret prerequisite validation"
+      contains: "kubectl get secret"
     - path: "deploy/helm/rds-csi-driver/README.md"
       provides: "Chart documentation"
       contains: "helm install"
@@ -49,12 +50,16 @@ must_haves:
       pattern: "range.*storageClasses"
     - from: "deploy/helm/rds-csi-driver/templates/servicemonitor.yaml"
       to: "deploy/helm/rds-csi-driver/templates/service.yaml"
-      via: "ServiceMonitor selector matches Service labels"
-      pattern: "matchLabels"
+      via: "ServiceMonitor selector matches Service labels including component=controller"
+      pattern: "app.kubernetes.io/component.*controller"
     - from: "deploy/helm/rds-csi-driver/templates/service.yaml"
       to: "deploy/helm/rds-csi-driver/templates/controller.yaml"
       via: "Service selector matches controller pod labels"
       pattern: "app.kubernetes.io/component.*controller"
+    - from: "deploy/helm/rds-csi-driver/templates/NOTES.txt"
+      to: "rds.secretName"
+      via: "NOTES.txt prints Secret verification command using .Values.rds.secretName"
+      pattern: "kubectl get secret.*\\.Values\\.rds\\.secretName"
 ---
 
 <objective>
@@ -62,7 +67,7 @@ Create the feature templates (StorageClass, VolumeSnapshotClass, Service, Servic
 
 Purpose: These are the user-facing chart features -- storage classes users reference in PVCs, monitoring integration with Prometheus, and documentation that guides installation and configuration. Without these, the chart deploys infrastructure but users can't use it.
 
-Output: Complete chart with all conditional resources, post-install instructions, and comprehensive README documenting every configuration option.
+Output: Complete chart with all conditional resources, post-install instructions (including Secret prerequisite validation), and comprehensive README documenting every configuration option.
 </objective>
 
 <execution_context>
@@ -193,6 +198,8 @@ spec:
 {{- end }}
 {{- end }}
 ```
+
+CRITICAL -- ServiceMonitor-to-Service selector matching: The ServiceMonitor `spec.selector.matchLabels` MUST include `app.kubernetes.io/component: controller` in addition to the base selectorLabels. This matches the labels on service.yaml (which also includes `app.kubernetes.io/component: controller`). Without this, the ServiceMonitor would match any service with the base selectorLabels, which could include the node pods in future.
   </action>
   <verify>
 Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi` and verify:
@@ -203,8 +210,17 @@ Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi`
 5. Run with `--set monitoring.serviceMonitor.enabled=true,monitoring.serviceMonitor.forceEnable=true` to verify ServiceMonitor renders
 
 Verify StorageClass parameters have correct default values (nvmeAddress=10.42.68.1, nvmePort=4420).
+
+**ServiceMonitor selector verification (REQUIRED):** When rendering with ServiceMonitor enabled, verify the ServiceMonitor selector includes `app.kubernetes.io/component: controller`:
+```bash
+helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi \
+  --set monitoring.serviceMonitor.enabled=true \
+  --set monitoring.serviceMonitor.forceEnable=true \
+  | grep -A 10 "kind: ServiceMonitor" | grep "component"
+```
+This must output a line containing `app.kubernetes.io/component: controller`. Also verify the Service has the matching label in its own labels section AND its selector section.
   </verify>
-  <done>Four feature templates render correctly. StorageClass loop creates only enabled classes with correct parameter defaults. ServiceMonitor has triple-conditional gate (monitoring + serviceMonitor + CRD detection). VolumeSnapshotClass is conditional.</done>
+  <done>Four feature templates render correctly. StorageClass loop creates only enabled classes with correct parameter defaults. ServiceMonitor has triple-conditional gate (monitoring + serviceMonitor + CRD detection) and its selector includes component=controller matching the Service. VolumeSnapshotClass is conditional.</done>
 </task>
 
 <task type="auto">
@@ -220,25 +236,36 @@ Include these sections (all templated with conditionals):
 
 1. **Header**: "Thank you for installing {{ .Chart.Name }}." with release name and namespace
 
-2. **Verify deployment**:
+2. **Prerequisites check** (CRITICAL -- Secret validation):
+   - Command to verify Secret exists: `kubectl get secret {{ .Values.rds.secretName }} -n {{ .Release.Namespace }}`
+   - Warning message if Secret is missing: "WARNING: The controller will fail to start if the Secret does not exist."
+   - Show required Secret structure:
+     ```
+     The secret must contain these keys:
+       - rds-private-key: SSH private key for RouterOS CLI
+       - rds-host-key: SSH host public key for host verification
+       - snmp-community: (optional) SNMP community string for hardware monitoring
+     ```
+   - Command to create Secret: `kubectl create secret generic {{ .Values.rds.secretName }} -n {{ .Release.Namespace }} --from-file=rds-private-key=/path/to/ssh-key --from-file=rds-host-key=/path/to/host-key`
+
+3. **Verify deployment**:
    - Command to check controller pod: `kubectl get pods -n {{ .Release.Namespace }} -l app.kubernetes.io/component=controller`
    - Command to check node pods: `kubectl get pods -n {{ .Release.Namespace }} -l app.kubernetes.io/component=node`
    - Command to verify CSI driver registration: `kubectl get csidriver rds.csi.srvlab.io`
 
-3. **Available StorageClasses**: Loop over `.Values.storageClasses`, list enabled ones with `(default)` annotation if isDefault
+4. **Available StorageClasses**: Loop over `.Values.storageClasses`, list enabled ones with `(default)` annotation if isDefault
 
-4. **Metrics** (conditional on monitoring.enabled):
+5. **Metrics** (conditional on monitoring.enabled):
    - Port-forward command: `kubectl port-forward -n {{ .Release.Namespace }} svc/{{ include "rds-csi.fullname" . }}-metrics {{ .Values.monitoring.port }}:{{ .Values.monitoring.port }}`
    - Warning if serviceMonitor.enabled but CRDs not detected
 
-5. **Upgrade notice** (conditional on .Release.IsUpgrade):
+6. **Upgrade notice** (conditional on .Release.IsUpgrade):
    - Warning about `--reuse-values`, recommend `--reset-then-reuse-values`
 
-6. **Prerequisites reminder**:
-   - Secret must exist: `kubectl get secret {{ .Values.rds.secretName }} -n {{ .Release.Namespace }}`
-   - If snapshotClass.enabled: Remind about VolumeSnapshot CRDs and snapshot-controller
+7. **Snapshot prerequisites** (conditional on snapshotClass.enabled):
+   - Remind about VolumeSnapshot CRDs and snapshot-controller
 
-7. **Documentation link**: GitHub URL
+8. **Documentation link**: GitHub URL
 
 **README.md** - Comprehensive chart documentation:
 
@@ -247,7 +274,7 @@ Structure:
 2. **Prerequisites**: Kubernetes 1.26+, Helm 3.14+, RDS with RouterOS 7.1+, SSH key pair, NVMe/TCP network connectivity
 3. **Quick Start**: 4 steps:
    - Create namespace: `kubectl create namespace rds-csi`
-   - Create secret (show full YAML example with ssh-key and snmp-community keys, note `rds-private-key` and `rds-host-key` key names matching what the driver mounts)
+   - Create secret (show full YAML example with `rds-private-key` and `rds-host-key` key names -- matching the deployed convention in deploy/kubernetes/controller.yaml)
    - Install chart: `helm install rds-csi ./deploy/helm/rds-csi-driver --namespace rds-csi`
    - Verify: `kubectl get pods -n rds-csi`
 4. **Configuration**: Table of ALL values.yaml parameters with:
@@ -260,15 +287,16 @@ Structure:
 7. **Monitoring**: How to enable ServiceMonitor, Prometheus scraping, RDS health metrics toggle
 8. **Upgrading**: Use `--reset-then-reuse-values`, note independent chart vs app versioning
 9. **Uninstalling**: `helm uninstall rds-csi -n rds-csi`. Note: PVs and PVCs are NOT deleted by uninstall
+10. **Distribution**: Chart is distributed via git repository only (clone or reference the deploy/helm/ directory). No OCI registry or Helm repository needed.
 
 Do NOT include emojis in either file. Use plain text markers like `WARNING:`, `NOTE:`, `IMPORTANT:` instead.
 
 Run `helm lint deploy/helm/rds-csi-driver/` after creating both files to verify the complete chart passes linting.
   </action>
   <verify>
-Run `helm lint deploy/helm/rds-csi-driver/` -- should pass with 0 errors. Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi --show-only templates/NOTES.txt` to verify NOTES render. Verify README.md covers all configuration sections (rds, controller, node, sidecars, monitoring, storageClasses).
+Run `helm lint deploy/helm/rds-csi-driver/` -- should pass with 0 errors. Run `helm template test-release deploy/helm/rds-csi-driver/ --namespace rds-csi --show-only templates/NOTES.txt` to verify NOTES render. Verify NOTES.txt contains `kubectl get secret {{ .Values.rds.secretName }}` prerequisite check. Verify README.md covers all configuration sections (rds, controller, node, sidecars, monitoring, storageClasses) and documents Secret key names as `rds-private-key` and `rds-host-key`.
   </verify>
-  <done>NOTES.txt renders with conditional sections based on values. README.md documents all configuration parameters, prerequisites, quick start, and upgrade instructions. Complete chart passes helm lint with no errors.</done>
+  <done>NOTES.txt renders with conditional sections based on values, including Secret prerequisite validation with exact kubectl command and required key names. README.md documents all configuration parameters, prerequisites, quick start, secret structure, and upgrade instructions. Distribution documented as git-only (no Helm repo publishing). Complete chart passes helm lint with no errors.</done>
 </task>
 
 </tasks>
@@ -281,16 +309,19 @@ Run `helm lint deploy/helm/rds-csi-driver/` -- should pass with 0 errors. Run `h
    - Metrics Service rendered
    - ServiceMonitor NOT rendered (disabled by default)
 3. `helm template ... --set storageClasses[0].isDefault=true` adds default annotation to StorageClass
-4. `helm template ... --set monitoring.serviceMonitor.enabled=true,monitoring.serviceMonitor.forceEnable=true` renders ServiceMonitor
-5. NOTES.txt shows verification commands, available storage classes, and prerequisites
-6. README.md has Quick Start, Configuration table, Secret Structure, and Upgrade sections
+4. `helm template ... --set monitoring.serviceMonitor.enabled=true,monitoring.serviceMonitor.forceEnable=true` renders ServiceMonitor with component=controller in selector
+5. NOTES.txt shows Secret prerequisite check, verification commands, available storage classes, and prerequisites
+6. README.md has Quick Start, Configuration table, Secret Structure (with rds-private-key/rds-host-key key names), and Upgrade sections
+7. ServiceMonitor selector matchLabels includes both selectorLabels AND app.kubernetes.io/component: controller
 </verification>
 
 <success_criteria>
 - StorageClass loop correctly handles enabled/disabled and defaults from rds.* values
 - ServiceMonitor triple-conditional prevents deployment failures on clusters without Prometheus Operator
-- NOTES.txt provides actionable post-install guidance
-- README.md documents all configuration options with defaults
+- ServiceMonitor selector matches Service selector (both include component=controller)
+- NOTES.txt provides Secret prerequisite validation with kubectl command and required key names
+- README.md documents all configuration options with defaults and Secret structure
+- Distribution documented as git-only (matching CONTEXT.md decision, no Helm repo publishing)
 - Complete chart passes helm lint with no errors
 </success_criteria>
 
